--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,6 @@
 <%= render "shared/second-header"%>
 
+
 <div class='transaction-contents'>
   <div class='transaction-main'>
     <h1 class='transaction-title-text'>
@@ -30,7 +31,7 @@
       </p>
     </div>
     <%# /支払額の表示 %>
-
+    <%= include_gon %>
     <%= form_with  model: @order_address, url: item_orders_path(@item.id), id: 'charge-form', class: 'transaction-form-wrap', local: true do |f| %>
     <%= render 'shared/error_messages', model: f.object %>
     
